--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,77 @@ p {
   background-color: #31d0aa;
 }
 
+.subscribe {
+  margin-left: auto;
+}
+
+.subscribe-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+
+.subscribe-input {
+  width: с 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.subscribe-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+}
+
+.subscribe-icon {
+  fill: #ffffff;
+  margin-left: 16px;
+}
+
+placeholder {
+  color: ffffff;
+}
+
+button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.svg {
+  width: 24px;
+  height: 24px;
+}
 /* #endregion footer */
 
 /* #region overlay darkening*/
@@ -547,11 +618,7 @@ p {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
   transition: opacity 250ms ease, visibility 250ms ease;
-  z-index: 1000;
 }
 
 .modal-overlay.is-open {
@@ -576,8 +643,7 @@ p {
   padding: 72px 24px 24px 24px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.14), 0 1px 3px rgba(0, 0, 0, 0.12),
     0 2px 1px rgba(0, 0, 0, 0.2);
-  transition: transform 250ms ease;
-  z-index: 1001;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
@@ -586,15 +652,16 @@ p {
   right: 24px;
   width: 24px;
   height: 24px;
-  background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
-  transition: background-color 250ms ease, border 250ms ease;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
@@ -605,7 +672,7 @@ p {
 }
 
 .modal-close-icon {
-  transition: fill 250ms ease;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
@@ -630,10 +697,12 @@ p {
   display: flex;
   flex-direction: column;
   gap: 4px;
+  margin-bottom: 8px;
 }
 
 .input-wrapper {
   position: relative;
+  margin-bottom: 16px;
 }
 
 .label {
@@ -641,6 +710,7 @@ p {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  margin-bottom: 4px;
 }
 
 /* #endregion modal window */
@@ -654,8 +724,8 @@ p {
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
-  transition: border-color 250ms ease;
   padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input {
@@ -666,6 +736,10 @@ p {
   height: 120px;
   padding: 8px 16px;
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .input:focus,
@@ -678,7 +752,7 @@ p {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 250ms ease;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: rgba(46, 47, 66, 0.4);
 }
 
@@ -695,6 +769,7 @@ p {
   align-items: center;
   gap: 8px;
   margin-top: 8px;
+  margin-bottom: 24px;
 }
 
 .checkbox-input {
@@ -716,12 +791,14 @@ p {
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: background-color 250ms ease, border 250ms ease, fill 250ms ease;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
+  display: inline-flex;
 }
 
 .checkbox-input:checked + .checkbox-label .checkbox-part {
@@ -754,6 +831,7 @@ p {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms ease;
 }
