--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,7 @@ p {
 }
 
 .subscribe-input {
-  width: с 264px;
+  width: 264px;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
@@ -618,7 +618,8 @@ button {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms ease, visibility 250ms ease;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -660,7 +661,7 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -697,7 +698,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 4px;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .input-wrapper {
@@ -797,7 +798,6 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-right: 8px;
   display: inline-flex;
 }
 
@@ -818,7 +818,7 @@ button {
 
 .send-form {
   display: block;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   margin: 0 auto;
   background-color: #4d5ae5;
@@ -831,9 +831,8 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms ease;
 }
 
 .send-form:hover,
