--- a/css/styles.css
+++ b/css/styles.css
@@ -698,7 +698,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 4px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .input-wrapper {
@@ -754,7 +754,12 @@ button {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: rgba(46, 47, 66, 0.4);
+  fill: #2e2f42;
+  display: inline-flex;
+}
+
+.input:focus {
+  border-color: #4d5ae5;
 }
 
 .input:focus + .input-icon {
