--- a/css/styles.css
+++ b/css/styles.css
@@ -596,7 +596,6 @@ placeholder {
 }
 
 button {
-  min-width: 165px;
   height: 40px;
   display: flex;
   justify-content: center;
@@ -617,6 +616,8 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 0;
+  pointer-events: none;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -653,13 +654,15 @@ button {
   right: 24px;
   width: 24px;
   height: 24px;
-  border-radius: 50%;
+  box-sizing: border-box;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0;
+  border-radius: 50%;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -673,7 +676,18 @@ button {
 }
 
 .modal-close-icon {
+  width: 100%;
+  height: 100%;
+  max-width: 8px;
+  max-height: 8px;
+  fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  pointer-events: none;
+}
+
+.modal-close:hover .modal-close-icon,
+.modal-close:focus .modal-close-icon {
+  fill: #fff;
 }
 
 .modal-title {
@@ -693,12 +707,14 @@ button {
   gap: 16px;
 }
 
-.label-wrapper,
-.text-wrapper {
+.label-wrappe {
   display: flex;
   flex-direction: column;
   gap: 4px;
-  margin-bottom: 8px;
+}
+
+.text-wrapper {
+  margin-bottom: 16px;
 }
 
 .input-wrapper {
@@ -799,11 +815,11 @@ button {
   border-radius: 2px;
   align-items: center;
   justify-content: center;
+  display: flex;
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
 }
 
 .checkbox-input:checked + .checkbox-label .checkbox-part {
