--- a/css/styles.css
+++ b/css/styles.css
@@ -270,12 +270,13 @@ p {
   position: absolute;
   width: 1px;
   height: 1px;
-  padding: 0;
   margin: -1px;
+  padding: 0;
+  border: 0;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  border: 0;
+  clip-path: inset(100%);
 }
 
 .benefits-list {
@@ -602,7 +603,8 @@ button {
   align-items: center;
 }
 
-.svg {
+.social-icon,
+.subscribe-icon {
   width: 24px;
   height: 24px;
 }
@@ -702,14 +704,10 @@ button {
 }
 
 .modal-form {
-  display: flex;
-  flex-direction: column;
   gap: 16px;
 }
 
 .label-wrapper {
-  display: flex;
-  flex-direction: column;
   gap: 4px;
   margin-bottom: 8px;
 }
@@ -770,6 +768,7 @@ button {
   position: absolute;
   left: 16px;
   top: 50%;
+  width: 13px;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #2e2f42;
@@ -780,8 +779,12 @@ button {
   border-color: #4d5ae5;
 }
 
-.input:focus + .input-icon {
+.input-wrapper:focus-within .input-icon {
   fill: #4d5ae5;
+}
+
+.input-icon {
+  fill: #2e2f42;
 }
 
 /* #endregion modal input */
@@ -815,6 +818,7 @@ button {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   display: inline-flex;
+  margin-right: 8px;
   align-items: center;
   justify-content: center;
   fill: transparent;
